--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: flutter_bounceable
 description: A simple, interactive and customizable on-tap bounce animation that can be wrapped on any widgets that you like.
 version: 1.0.0
-homepage:
+homepage: https://github.com/MingSern/flutter_bounceable
+repository: https://github.com/MingSern/flutter_bounceable
+issue_tracker: https://github.com/MingSern/flutter_bounceable/issues
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
